# LidarMappingReloc

./: .gitignore  README.md  README.txt
backups/src1/: CMakeLists.txt
backups/src1/config/: params_fordav.yaml  params_wheelchair.yaml
backups/src1/include/: Scancontext.h  utility.h
backups/src1/launch/: run_wheelchair.launch
backups/src1/launch/include/: module_loam.launch
backups/src1/msg/: cloud_info.msg
backups/src1/src/: BRIEF.cpp  Scancontext.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
cpp_test/: 1.txt  CMakeLists.txt  a.out  test.cpp
devel/: .catkin  setup.sh
devel/include/lio_sam/: cloud_info.h  save_map.h  save_mapRequest.h  save_mapResponse.h
devel/lib/pkgconfig/: lio_sam.pc
devel/share/lio_sam/cmake/: lio_sam-msg-extras.cmake  lio_sam-msg-paths.cmake  (+1 more)
maps/: desComp.m
maps/office/: corner0.pcd  corner1.pcd  corner10.pcd  corner100.pcd  corner101.pcd  corner102.pcd  corner103.pcd  corner104.pcd  corner105.pcd  corner106.pcd  corner107.pcd  corner108.pcd  corner109.pcd  corner11.pcd  corner110.pcd  corner111.pcd  corner112.pcd  corner113.pcd  corner114.pcd  corner115.pcd  corner116.pcd  corner117.pcd  corner118.pcd  corner119.pcd  corner12.pcd  corner120.pcd  corner121.pcd  corner122.pcd  corner123.pcd  corner124.pcd  corner125.pcd  corner126.pcd  corner127.pcd  corner128.pcd  corner129.pcd  corner13.pcd  corner130.pcd  corner131.pcd  corner132.pcd  corner133.pcd  (+295 more)
maps/office/BLC/: descriptor128dim_60kp.txt  keypoints60.txt  path_from3D.txt
maps/office/scanContext/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+127 more)
maps/office_rev/: corner0.pcd  corner1.pcd  corner10.pcd  corner100.pcd  corner101.pcd  corner102.pcd  corner103.pcd  corner104.pcd  corner105.pcd  corner106.pcd  corner107.pcd  corner108.pcd  corner109.pcd  corner11.pcd  corner110.pcd  corner111.pcd  corner112.pcd  corner113.pcd  corner114.pcd  corner115.pcd  corner116.pcd  corner117.pcd  corner118.pcd  corner119.pcd  corner12.pcd  corner120.pcd  corner121.pcd  corner122.pcd  corner123.pcd  corner124.pcd  corner125.pcd  corner126.pcd  corner127.pcd  corner128.pcd  corner129.pcd  corner13.pcd  corner130.pcd  corner131.pcd  corner132.pcd  corner133.pcd  (+251 more)
maps/recovery_room/: corner0.pcd  corner1.pcd  corner10.pcd  corner11.pcd  corner12.pcd  corner13.pcd  corner14.pcd  corner15.pcd  corner16.pcd  corner17.pcd  corner18.pcd  corner19.pcd  corner2.pcd  corner20.pcd  corner21.pcd  corner22.pcd  corner23.pcd  corner24.pcd  corner25.pcd  corner26.pcd  corner27.pcd  corner28.pcd  corner29.pcd  corner3.pcd  corner30.pcd  corner31.pcd  corner32.pcd  corner33.pcd  corner34.pcd  corner35.pcd  corner36.pcd  corner37.pcd  corner38.pcd  corner39.pcd  corner4.pcd  corner40.pcd  corner41.pcd  corner42.pcd  corner43.pcd  corner44.pcd  (+77 more)
src/: CMakeLists.txt
src/config/: params.yaml  params_eu_longterm.yaml  params_kitti.yaml  params_nclt.yaml  params_wheelchair.yaml
src/include/: Scancontext.h  utility.h
src/include/DVision/: BRIEF.cpp  BRIEF.h
src/launch/: run_eu_longterm.launch  run_fordav.launch  run_nclt.launch  run_wheelchair.launch
src/launch/include/: module_loam.launch  module_navsat.launch
src/launch/include/config/: rviz.rviz
src/msg/: cloud_info.msg
src/src/: featureExtraction.cpp  imageProjection.cpp  mapOptmization.cpp  pcl_visualize.cpp
src/src/back_up/: mapOptmization (copy)_BL.cpp  mapOptmization copy.cpp
test/: test.cpp
test/office/: path_6DOF.txt  path_from3D.txt
test/office_rev/: CornerMap.pcd  path_from3D.txt  path_from3D_key.txt  trajectory.pcd  transformations.pcd
test/recovery_room/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.pcd  transformations.pcd
(+8 files in other folders)
